Added examples to Swagger docs
