# image-metadata/cmd/docs/swagger.yaml
@@ -25,14 +25,16 @@ info:
 paths:
   /metadata:
     delete:
-      description: deletes many metadata entries based on its query parameters. **At
+      description: Deletes many metadata entries based on its query parameters. **At
         least one paramater must be present!**
       parameters:
       - description: Image ID (not the metadata entry's ID)
+        example: 42
         in: query
         name: image_id
         type: integer
       - description: Image rating, between 0 and 5 (inclusive)
+        example: 4
         in: query
         name: rating
         type: integer
@@ -40,7 +42,7 @@ paths:
       - application/json
       responses:
         "204":
-          description: Matching entry
+          description: Sucessfully deleted
         "400":
           description: Neither `image_id` nor `rating` specified, but at least one
             is needed
@@ -55,23 +57,36 @@ paths:
       tags:
       - metadata
     get:
-      description: retrieves many metadata entries based on its query parameters.
+      description: Retrieves many metadata entries based on its query parameters.
       parameters:
-      - description: Maximum amount of returned entries (>0)
+      - description: Maximum amount of returned entries (>0). To be used with `offset`
+          in order to achieve pagination.
+        example: 20
         in: query
         name: limit
         type: integer
-      - description: Amount of entries left out at the start
+      - description: Amount of entries left out at the start. To be used with `limit`
+          in order to achieve pagination.
+        example: 10
         in: query
         name: offset
         type: integer
       - description: SQL sorting in with pattern `<field>:<order>[,]...`, first pattern
           does primary sort, second pattern secondary sort etc.
+        example: rating:asc,image_id:desc
         in: query
         name: sort
         type: string
-      - description: Image rating, between 0 and 5 (inclusive)
+      - description: The ID of the image to which the metadata entry belongs.
+        example: 42
         in: query
+        name: image_id
+        type: integer
+      - description: Image rating, between 0 and 5 (inclusive)
+        example: 4
+        in: query
+        maximum: 5
+        minimum: 0
         name: rating
         type: integer
       produces:
@@ -96,7 +111,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: creates a new metadata entry in the database
+      description: Creates a new metadata entry in the database
       parameters:
       - description: Insert metadata payload
         in: body
@@ -126,6 +141,7 @@ paths:
       description: Deletes a specific metadata entry based on its ID.
       parameters:
       - description: Metadata entry ID
+        example: 42
         in: path
         name: id
         required: true
@@ -148,9 +164,10 @@ paths:
       tags:
       - metadata
     get:
-      description: retrieves a specific metadata entry based on its ID.
+      description: Retrieves a specific metadata entry based on its ID.
       parameters:
       - description: Metadata entry ID
+        example: 42
         in: path
         name: id
         required: true
